yoshimi 1.3.x

2015-7-11 Will
- Fixed bug that would crash if a bank or instrument rename
  was cancelled.

2015-7-10 Will
- Added exclusions to CC designations.
- Improved vector control error checks.
- More doc updates.
- Implemented redefinable vector features

2015-7-5 Will
- Minor gui bugfix 'Simple Sound' correctly set to 'No Title' in
  all windows when actually edited.
- Vector control individual features can be reversed.
- Enabled NRPN part destination setting.

2015-7-3 Will
- Merged in corrected buffers - still some work to do on alsa
  audio which has been incorrect for a long time but should be OK
  on motherboard chipsets.
- More documentation!

2015-6-24 Will (buffers)
- Set up and tested separate buffers for JACK only, very untidy.
- currently breaks ALSA and LV2.

2015-6-19 Will
- bugfix set typecast in BankUI to enable build with fltk 1.1
- bugfix changed MasterUI so that main window is refreshed when
  'State' is loaded.

yoshimi 1.3.5
- Finalised for release and tagged.
- Added more details to docs.

yoshimi 1.3.5-rc4

- Fixed failure of Insert Effect part list length to update when
  number of parts changed.

yoshimi 1.3.5-rc3

2015-6-13 Will
- Fixed regression that was messing up pitch change.

yoshimi 1.3.5-rc2

2015-6-11 Will
- Fixed gui bug, disappearing 'Bypass Global F.' when Addsynth Voice
  Filter checkbutton clicked.
- Vector checks and sets related part channel numbers instead of
  assuming default values.

yoshimi 1.3.5-rc

2015-6-7 Will
- Jack port only registered if direct part output is set as well as 
  the part being enabled.
- Mixer panel refresh button hidden (redundant).
  Will eventually be removed if no problems seen.

2015-6-5 Will
- Improved engine colour sync, and also responds to kit part edits.

2015-6-1 Will
- Common Add,Sub,Pad colours now defines in CMakeLists.txt

2015-5-30 Will
- Vector control volume 'swap' now uses an inverse square law to keep the
  overall level fairly constant.