@@ -819,7 +819,7 @@ ZynAddSubFX}
         code0 {o->copy_label(string("Copyright (c) 2002-2009 Nasca O. PAUL and others"
                                "\\nCopyright 2009-2011, Alan Calvert"
                                "\\nCopyright 2012-2013, Jeremy Jongepier and others"
-                               "\\nCopyright 2014, Will Godfrey and others"
+                               "\\nCopyright 2014-2015, Will Godfrey and others"
                                "\\nLV2 plugin Copyright 2014, Andrew Deryabin"
                                "\\nSplash Image Copyright 2015, James Fraser").c_str());}
       }
