@@ -1,5 +1,10 @@
 yoshimi 1.3.x
 
+2015-7-15 Will
+- Addied sanity checks to vector feature CC settings.
+- Small correction to alsa audio.
+- More doc updates.
+
 2015-7-11 Will
 - Fixed bug that would crash if a bank or instrument rename
   was cancelled.
